// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `null`;

exports[`Storyshots Components/Button With onClick 1`] = `null`;

exports[`Storyshots Components/Image Circle with fallback 1`] = `null`;

exports[`Storyshots Components/Image Circle with src 1`] = `null`;

exports[`Storyshots Components/Image Default 1`] = `null`;

exports[`Storyshots Components/Image With knobs 1`] = `null`;

exports[`Storyshots Components/Image With src 1`] = `null`;

exports[`Storyshots Components/Tabs Default 1`] = `null`;

exports[`Storyshots Components/Tabs With a disabled tab 1`] = `null`;

exports[`Storyshots Components/Tabs With all tabs disabled 1`] = `null`;

exports[`Storyshots Components/Text Default 1`] = `null`;

exports[`Storyshots Components/Text With color picker 1`] = `null`;

exports[`Storyshots Components/Text With knobs 1`] = `null`;

exports[`Storyshots Slides/Conclusion Storybook 1`] = `
<div
  className="sc-eHgmQL cgtfSk"
>
  <div
    className="sc-cvbbAY kpqGew"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Storybook"
        className="sc-htpNat jmSusC"
        height={160}
        src="storybook.png"
        width={160}
      />
    </span>
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
      style={
        Object {
          "margin": "24px 0",
        }
      }
    >
      Storybook
    </p>
    <p
      className="sc-jWBwVP fDrbnp sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      The playground you need for your UI components!
       
      <span
        aria-label="tada"
        role="img"
      >
        🎨
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Conclusion Thanks! 1`] = `
<div
  className="sc-eHgmQL cgtfSk"
>
  <div
    className="sc-cvbbAY kpqGew"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Storybook"
        className="sc-htpNat jmSusC"
        height={160}
        src="storybook.png"
        width={160}
      />
    </span>
    <p
      className="sc-bdVaJa jaeJLi"
      color="#ff4685"
      size="120px"
      style={
        Object {
          "margin": "24px 0",
        }
      }
    >
      Thanks!
    </p>
    <p
      className="sc-jWBwVP fDrbnp sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "fontSize": "26px",
        }
      }
    >
      Slides
      '
       source code:
       
      <a
        href="https://github.com/ReactBeerLille/storybook-talk"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://github.com/ReactBeerLille/storybook-talk
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Demo DEMO with blink 1`] = `
<div
  className="sc-cSHVUG fOucUL"
>
  <div
    className="sc-kAzzGY gUhNFc"
  >
    <p
      className="sc-bdVaJa jaeJLi"
      color="#ff4685"
      size="120px"
      style={
        Object {
          "margin": "0 0.4em",
        }
      }
    >
      DEMO!
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Demo DEMO! 1`] = `
<div
  className="sc-cSHVUG fOucUL"
>
  <div
    className="sc-kAzzGY gUhNFc"
  >
    <p
      className="sc-chPdSV gBDzuT sc-bdVaJa bvaadn"
      color="#000"
      size="60px"
    >
      Okay, it
      '
      s time for a...
    </p>
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
      style={
        Object {
          "margin": "0 0.4em",
        }
      }
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        DEMO!
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Demo Getting started 1`] = `
<div
  className="sc-cSHVUG fOucUL"
>
  <div
    className="sc-kAzzGY gUhNFc"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Getting started : npx -p @storybook/cli sb init"
        className="sc-htpNat eeGsRV"
        height={250}
        src="getting-started.png"
        width={780}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Demo Inception 1`] = `
<div
  className="sc-cSHVUG fOucUL"
>
  <div
    className="sc-kAzzGY gUhNFc"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Inception"
        className="sc-htpNat deRJxA"
        height={500}
        src="inception.png"
        width={780}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Demo It's time for a... 1`] = `
<div
  className="sc-cSHVUG fOucUL"
>
  <div
    className="sc-kAzzGY gUhNFc"
  >
    <p
      className="sc-chPdSV gBDzuT sc-bdVaJa bvaadn"
      color="#000"
      size="60px"
    >
      Okay, it
      '
      s time for a...
    </p>
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
      style={
        Object {
          "margin": "0 0.4em",
          "opacity": 0,
        }
      }
    >
      DEMO!
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Examples Deployment 1`] = `
<div
  className="sc-dxgOiQ cgQVzw"
>
  <div
    className="sc-ckVGcZ ccDxOR"
  >
    <p
      className="sc-hMqMXs ejeNtp sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      We can 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        build
      </span>
       it statically &
       
      <span
        className="sc-ifAKCX fKuUaG"
      >
        deploy
      </span>
       it easily
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Examples Some great examples 1`] = `
<div
  className="sc-dxgOiQ cgQVzw"
>
  <div
    className="sc-ckVGcZ ccDxOR"
  >
    <p
      className="sc-hMqMXs ejeNtp sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
      style={
        Object {
          "marginBottom": "80px",
        }
      }
    >
      Some great 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        examples
      </span>
    </p>
    <div
      className="sc-jKJlTe cngXqQ"
    >
      <a
        className="sc-eNQAEJ lppskl"
        href="https://airbnb.io/react-dates/"
        target="_blank"
      >
        <span
          className="sc-bwzfXH ghuPdm"
        >
          <img
            alt="airbnb react-dates"
            className="sc-htpNat liTaHk"
            height={80}
            src="airbnb.png"
            style={
              Object {
                "marginTop": 50,
              }
            }
            width={270}
          />
        </span>
      </a>
      <a
        className="sc-eNQAEJ lppskl"
        href="https://mashmatrix.github.io/react-lightning-design-system/"
        target="_blank"
      >
        <span
          className="sc-bwzfXH ghuPdm"
        >
          <img
            alt="salesforce react design system"
            className="sc-htpNat huwEGd"
            height={180}
            src="salesforce.png"
            style={
              Object {
                "marginTop": 50,
              }
            }
            width={270}
          />
        </span>
      </a>
      <a
        className="sc-eNQAEJ lppskl"
        href="https://auth0-cosmos.now.sh/sandbox/"
        target="_blank"
      >
        <span
          className="sc-bwzfXH ghuPdm"
        >
          <img
            alt="auth0 cosmos"
            className="sc-htpNat ekxNit"
            height={100}
            src="auth0.png"
            style={
              Object {
                "marginTop": 50,
              }
            }
            width={270}
          />
        </span>
      </a>
      <a
        className="sc-eNQAEJ lppskl"
        href="https://primer.github.io/storybook/"
        target="_blank"
      >
        <span
          className="sc-bwzfXH ghuPdm"
        >
          <img
            alt="github primer"
            className="sc-htpNat ieQAlO"
            height={110}
            src="github.png"
            style={
              Object {
                "marginTop": 50,
              }
            }
            width={270}
          />
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro A component story... 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      A 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        component
      </span>
       story...
    </p>
    <button
      className="sc-gqjmRU dBzyce sc-bxivhb isMdZS"
      onClick={[Function]}
      style={
        Object {
          "opacity": 0,
        }
      }
      type="button"
    >
      <span
        aria-label="oh !"
        role="img"
      >
        😱
      </span>
       
      Tell me more!
       
      <span
        aria-label="love"
        role="img"
      >
        😍
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro A lot of combinations... 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      There is a lot of 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        combinations
      </span>
      ...
    </p>
    <iframe
      allowFullScreen={true}
      className="giphy-embed"
      frameBorder="0"
      height="268"
      src="https://giphy.com/embed/3o7btPCcdNniyf0ArS"
      style={
        Object {
          "margin": "0 auto",
          "marginTop": "40px",
        }
      }
      title="confused"
      width="480"
    />
  </div>
</div>
`;

exports[`Storyshots Slides/Intro A simple pagination component 1 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      A simple 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        pagination
      </span>
       component
    </p>
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="A simple pagination component"
        className="sc-htpNat jpYgKm"
        height={400}
        src="pagination.png"
        style={
          Object {
            "opacity": 0,
          }
        }
        width={750}
      />
    </span>
    <p
      className="sc-bdVaJa fTvotV"
      color="#000"
      size="12px"
      style={
        Object {
          "fontStyle": "italic",
          "opacity": 0,
        }
      }
    >
      Source:
       
      <a
        href="https://www.youtube.com/watch?v=PF0Vi-iIyoo"
        rel="noopener noreferrer"
        target="_blank"
      >
        Marie-Laure Thuret - React Storybook: Design, Dev, Doc, Debug Components - React Conf 2017
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro A simple pagination component 2 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      A simple 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        pagination
      </span>
       component
    </p>
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="A simple pagination component"
        className="sc-htpNat jpYgKm"
        height={400}
        src="pagination.png"
        width={750}
      />
    </span>
    <p
      className="sc-bdVaJa fTvotV"
      color="#000"
      size="12px"
      style={
        Object {
          "fontStyle": "italic",
        }
      }
    >
      Source:
       
      <a
        href="https://www.youtube.com/watch?v=PF0Vi-iIyoo"
        rel="noopener noreferrer"
        target="_blank"
      >
        Marie-Laure Thuret - React Storybook: Design, Dev, Doc, Debug Components - React Conf 2017
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro About @lauthieb 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Laurent Thiebault"
        className="sc-htpNat hLnUBC"
        height={300}
        src="lauthieb.jpg"
        width={300}
      />
    </span>
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Laurent Thiebault
    </p>
    <p
      className="sc-htoDjs bZzhDu sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      Tech Lead at Decathlon
       
      <span
        aria-label="guy with a laptop"
        role="img"
      >
        👨🏻‍💻
      </span>
       
      <span
        aria-label="ball"
        role="img"
      >
        🏈
      </span>
    </p>
    <p
      className="sc-iwsKbI htOEeN sc-bdVaJa cBVWqd"
      color="#000"
      size="30px"
    >
      <div
        className="sc-gZMcBi izdOyA"
      >
        <span
          aria-label="twitter"
          role="img"
        >
          🐦
        </span>
         
        <a
          href="https://twitter.com/lauthieb"
          rel="noopener noreferrer"
          target="_blank"
        >
          twitter.com/lauthieb
        </a>
      </div>
      <div
        className="sc-gZMcBi izdOyA"
      >
        <span
          aria-label="github"
          role="img"
        >
          😺
        </span>
         
        <a
          href="https://github.com/lauthieb"
          rel="noopener noreferrer"
          target="_blank"
        >
          github.com/lauthieb
        </a>
      </div>
      <div
        className="sc-gZMcBi izdOyA"
      >
        <span
          aria-label="blog"
          role="img"
        >
          📝
        </span>
         
        <a
          href="https://dev.to/lauthieb"
          rel="noopener noreferrer"
          target="_blank"
        >
          dev.to/lauthieb
        </a>
      </div>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Brain explosion & time consuming! 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <iframe
      allowFullScreen={true}
      className="giphy-embed"
      frameBorder="0"
      height="600px"
      src="https://giphy.com/embed/2rqEdFfkMzXmo"
      style={
        Object {
          "margin": "0 auto",
        }
      }
      title="Brain explosion!"
      width="1000px"
    />
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Building components is complicated 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Building components is 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        complicated
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Components introduce new challenges 1 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Components introduce 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        new challenges
      </span>
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="explosion"
        role="img"
      >
        💥
      </span>
       
      Countless situations & states to support
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="hard"
        role="img"
      >
        🤯
      </span>
       
      Hundreds of components and use cases
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="bomb"
        role="img"
      >
        💣
      </span>
       
      Bugs spread because of dependencies
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Components introduce new challenges 2 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Components introduce 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        new challenges
      </span>
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="explosion"
        role="img"
      >
        💥
      </span>
       
      Countless situations & states to support
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="hard"
        role="img"
      >
        🤯
      </span>
       
      Hundreds of components and use cases
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="bomb"
        role="img"
      >
        💣
      </span>
       
      Bugs spread because of dependencies
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Components introduce new challenges 3 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Components introduce 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        new challenges
      </span>
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="explosion"
        role="img"
      >
        💥
      </span>
       
      Countless situations & states to support
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="hard"
        role="img"
      >
        🤯
      </span>
       
      Hundreds of components and use cases
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="bomb"
        role="img"
      >
        💣
      </span>
       
      Bugs spread because of dependencies
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Components introduce new challenges 4 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Components introduce 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        new challenges
      </span>
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="explosion"
        role="img"
      >
        💥
      </span>
       
      Countless situations & states to support
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="hard"
        role="img"
      >
        🤯
      </span>
       
      Hundreds of components and use cases
    </p>
    <p
      className="sc-dnqmqq feeNAA sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="bomb"
        role="img"
      >
        💣
      </span>
       
      Bugs spread because of dependencies
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Or if you come back in 6 months? 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Or if you 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        come back
      </span>
       in 6 months?
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Storybook 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Storybook"
        className="sc-htpNat jmSusC"
        height={160}
        src="storybook.png"
        width={160}
      />
    </span>
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      Storybook
    </p>
    <p
      className="sc-htoDjs bZzhDu sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      The playground you need for your UI components!
       
      <span
        aria-label="tada"
        role="img"
      >
        🎨
      </span>
    </p>
    <p
      className="sc-iwsKbI htOEeN sc-bdVaJa cBVWqd"
      color="#000"
      size="30px"
    >
      React Beer Lille #1
       
      <span
        aria-label="react"
        role="img"
      >
        ⚛️
      </span>
       
      <span
        aria-label="beer"
        role="img"
      >
        🍺
      </span>
       
      / Laurent Thiebault
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro Tell me more! 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      A 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        component
      </span>
       story...
    </p>
    <button
      className="sc-gqjmRU dBzyce sc-bxivhb isMdZS"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="oh !"
        role="img"
      >
        😱
      </span>
       
      Tell me more!
       
      <span
        aria-label="love"
        role="img"
      >
        😍
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro We need a solution... 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      We need a 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        solution
      </span>
       
      <span
        aria-label="love"
        role="img"
      >
        🙏
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Intro What if a new developer arrives? 1`] = `
<div
  className="sc-EHOje pTGQh"
>
  <div
    className="sc-bZQynM fMtTNs"
  >
    <p
      className="sc-gzVnrw fDvciQ sc-bdVaJa fEiwOK"
      color="#000"
      size="80px"
    >
      What if a 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        new developer
      </span>
       arrives?
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/SBDD API first 1`] = `
<div
  className="sc-kgoBCf doLwbS"
>
  <div
    className="sc-kGXeez jmSCAp"
  >
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Now, we think 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        API first
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/SBDD Adopt it! 1`] = `
<div
  className="sc-kgoBCf doLwbS"
>
  <div
    className="sc-kGXeez jmSCAp"
  >
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      So, let
      '
      s adopt the...
    </p>
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        Storybook Driven Development
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/SBDD Discovery enhanced 1`] = `
<div
  className="sc-kgoBCf doLwbS"
>
  <div
    className="sc-kGXeez jmSCAp"
  >
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Now, 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        discovery
      </span>
       is enhanced for
       
      <span
        className="sc-ifAKCX fKuUaG"
      >
        outside & inside
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/SBDD Isolated environment 1`] = `
<div
  className="sc-kgoBCf doLwbS"
>
  <div
    className="sc-kGXeez jmSCAp"
  >
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Now, we can develop 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        fast
      </span>
       in isolation
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/SBDD It's not finished 1`] = `
<div
  className="sc-kgoBCf doLwbS"
>
  <div
    className="sc-kGXeez jmSCAp"
  >
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      But... It
      '
      s 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        not finished!
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/SBDD Live documentation 1`] = `
<div
  className="sc-kgoBCf doLwbS"
>
  <div
    className="sc-kGXeez jmSCAp"
  >
    <p
      className="sc-kpOJdX kASMDW sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Now, we have a 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        live documentation
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Storybook Build components and use cases in isolation 1`] = `
<div
  className="sc-VigVT hABiJd"
>
  <div
    className="sc-jTzLTM jWVrYP"
  >
    <p
      className="sc-fjdhpX bYRITd sc-bdVaJa bvaadn"
      color="#000"
      size="60px"
    >
      Build components and use cases in 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        isolation
      </span>
    </p>
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Build components and use cases in isolation"
        className="sc-htpNat fQaWYP"
        height={610}
        src="storybook-build-components.png"
        style={
          Object {
            "marginTop": 50,
          }
        }
        width={1300}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Storybook Customize functionality with addons 1`] = `
<div
  className="sc-VigVT hABiJd"
>
  <div
    className="sc-jTzLTM jWVrYP"
  >
    <p
      className="sc-fjdhpX bYRITd sc-bdVaJa bvaadn"
      color="#000"
      size="60px"
    >
      Customize functionality with 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        addons
      </span>
    </p>
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Customize functionality with addons"
        className="sc-htpNat grwTLf"
        height={580}
        src="storybook-addons.png"
        style={
          Object {
            "marginTop": 50,
          }
        }
        width={1300}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Storybook Presentation 1`] = `
<div
  className="sc-VigVT hABiJd"
>
  <div
    className="sc-jTzLTM jWVrYP"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Storybook's presentation"
        className="sc-htpNat iqMNwz"
        height={680}
        src="storybook-presentation.png"
        width={1500}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Storybook Save use cases as stories 1`] = `
<div
  className="sc-VigVT hABiJd"
>
  <div
    className="sc-jTzLTM jWVrYP"
  >
    <p
      className="sc-fjdhpX bYRITd sc-bdVaJa bvaadn"
      color="#000"
      size="60px"
    >
      Save 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        use cases
      </span>
       as stories
    </p>
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Save use cases as stories"
        className="sc-htpNat gEyCPJ"
        height={600}
        src="storybook-stories.png"
        style={
          Object {
            "marginTop": 50,
          }
        }
        width={1320}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Storybook Storybook 1`] = `
<div
  className="sc-VigVT hABiJd"
>
  <div
    className="sc-jTzLTM jWVrYP"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Storybook"
        className="sc-htpNat ckqrYp"
        height={220}
        src="storybook.png"
        width={220}
      />
    </span>
    <p
      className="sc-jzJRlG iaaMGx sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
    >
      Storybook
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Storybook Storybook lives alongside your app 1`] = `
<div
  className="sc-VigVT hABiJd"
>
  <div
    className="sc-jTzLTM jWVrYP"
  >
    <p
      className="sc-fjdhpX bYRITd sc-bdVaJa bvaadn"
      color="#000"
      size="60px"
    >
      Storybook lives 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        alongside
      </span>
       your app
    </p>
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="Storybook lives alongside your app"
        className="sc-htpNat crhMnK"
        height={410}
        src="storybook-life.png"
        style={
          Object {
            "marginTop": 50,
          }
        }
        width={1300}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Automated Visual Testing 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        Automated Visual
      </span>
       Testing
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Automated Visual Testing Illustration 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="automated visual testing"
        className="sc-htpNat cMmwfl"
        height={350}
        src="automated-visual-testing.png"
        width={1200}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Interaction Testing 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        Interaction
      </span>
       Testing
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Interaction Testing Illustration 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="interaction testing"
        className="sc-htpNat LqimM"
        height={700}
        src="interaction-testing.png"
        width={1200}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Manual Testing 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        Manual
      </span>
       Testing
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Structural Testing 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        Structural
      </span>
       Testing
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Structural Testing Illustration 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <span
      className="sc-bwzfXH ghuPdm"
    >
      <img
        alt="structural testing"
        className="sc-htpNat lmkAid"
        height={600}
        src="structural-testing.png"
        width={1200}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing UI Testing 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-bdVaJa iFWMJO"
      color="#000"
      size="120px"
    >
      <span
        className="sc-ifAKCX fKuUaG"
      >
        UI
      </span>
       Testing
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Why do we need to test? 1 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-iAyFgw gsMVIZ sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Why do we need to 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        test
      </span>
      ?
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="glass"
        role="img"
      >
        🔍
      </span>
       
      To find bugs
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="muscle"
        role="img"
      >
        💪
      </span>
       
      To make sure things won’t break between new code commits.
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="documentation"
        role="img"
      >
        📝
      </span>
       
      To keep tests as living documentations
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Why do we need to test? 2 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-iAyFgw gsMVIZ sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Why do we need to 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        test
      </span>
      ?
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="glass"
        role="img"
      >
        🔍
      </span>
       
      To find bugs
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="muscle"
        role="img"
      >
        💪
      </span>
       
      To make sure things won’t break between new code commits.
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="documentation"
        role="img"
      >
        📝
      </span>
       
      To keep tests as living documentations
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Why do we need to test? 3 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-iAyFgw gsMVIZ sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Why do we need to 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        test
      </span>
      ?
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="glass"
        role="img"
      >
        🔍
      </span>
       
      To find bugs
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="muscle"
        role="img"
      >
        💪
      </span>
       
      To make sure things won’t break between new code commits.
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <span
        aria-label="documentation"
        role="img"
      >
        📝
      </span>
       
      To keep tests as living documentations
    </p>
  </div>
</div>
`;

exports[`Storyshots Slides/Testing Why do we need to test? 4 1`] = `
<div
  className="sc-kEYyzF fhwAsF"
>
  <div
    className="sc-kkGfuU gdvFJe"
  >
    <p
      className="sc-iAyFgw gsMVIZ sc-bdVaJa iuIXIB"
      color="#000"
      size="70px"
    >
      Why do we need to 
      <span
        className="sc-ifAKCX fKuUaG"
      >
        test
      </span>
      ?
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="glass"
        role="img"
      >
        🔍
      </span>
       
      To find bugs
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="muscle"
        role="img"
      >
        💪
      </span>
       
      To make sure things won’t break between new code commits.
    </p>
    <p
      className="sc-hSdWYo cjOSvj sc-bdVaJa aZHze"
      color="#000"
      size="42px"
    >
      <span
        aria-label="documentation"
        role="img"
      >
        📝
      </span>
       
      To keep tests as living documentations
    </p>
  </div>
</div>
`;
